--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Abel&family=Anton&family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Amatic+SC&family=Bebas+Neue&family=Gloria+Hallelujah&family=Mochiy+Pop+One&family=Permanent+Marker&family=Rock+Salt&display=swap" rel="stylesheet">
     <title>Lucas Agostinho</title>
   </head>
   <body>
